--- a/resources/css/ui/_defaults.scss
+++ b/resources/css/ui/_defaults.scss
@@ -16,7 +16,7 @@ p, h1, h2, h3, a {
         font-size: 16px;
     }
     letter-spacing: .818px;
-    line-height: 24px;
+    line-height: 1.4;
     padding: 5px 0;
 }
 
